--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -4,11 +4,16 @@
 	left: 0;
 	height: 100vh;
 	width: 100%;
-	background-color: rgba($color-black, 0.8);
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity 0.3s, visibility 0.3s;
 	z-index: 100;
+
+	@supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+		-webkit-backdrop-filter: blur(10px);
+		backdrop-filter: blur(10px);
+		background-color: rgba($color-black, 0.4);
+	}
 
 	&__content {
 		@include absCenter;
